--- a/慕课网实践/企业网站/css/main.css
+++ b/慕课网实践/企业网站/css/main.css
@@ -129,3 +129,104 @@ body{
 	background-color:#fff;
 	padding-right:25px;
 }
+
+.ad{
+	height:310px;
+	overflow:hidden;/*溢出时隐藏*/
+}
+
+.main{
+	height:250px;
+	background-color:#FFFFFF;
+	margin-top:5px;
+}
+
+.news{
+	width:340px;
+	boder:1px solid #E8E8E8;
+}
+
+.course{
+	width:410px;
+	boder:1px solid #E8E8E8;
+	margin:0 7px;
+}
+
+.sidebar{
+	width:230px;
+}
+
+.news,.course,.sidebar{
+	height:250px;
+	float:left;
+}
+
+.title{
+	height:35px;
+	border-bottom:2px solid #E8E8E8;
+}
+
+.title_left{
+	width:70%;
+	font-family:"微软雅黑";
+	font-size:14px;
+	font-weight:bold;
+	color:#786F66;
+	float:left;
+	line-height:35px;
+	padding-left:20px;
+}
+
+.title_right{
+	width:20%;
+	line-height:35px;
+	float:right;
+}
+
+.title_right a{
+	text-decoration:none;
+	color:#999999;
+}
+
+.pic_news{
+	height:80px;
+	margin-top:10px;
+	line-height:15px;
+}
+
+.pic_news img{
+	float:left;
+	margin:0 20px 0 5px;
+}
+
+.pic_news a{
+	color:#C00;
+	text-decoration:none;
+}
+
+.news_list{
+	margin-top:20px;
+}
+
+.news_list li{
+	list-style-type:none;
+	background:url(../images/list.jpg) no-repeat;
+	padding-left:10px;
+	margin:10px;
+	border-bottom:1px dotted #CCC;
+}
+
+.news_list a:link,.news_list a:visited{
+	text-decoration:none;
+	color:#000;
+}
+
+.news_list a:hover,.news_list a:active{
+	text-decoration:none;
+	color:#C00;
+}
+
+.news_list span{
+	color:#999;
+	float:right;
+}
