--- a/慕课网实践/企业网站/css/main.css
+++ b/慕课网实践/企业网站/css/main.css
@@ -48,6 +48,7 @@ body{
 }
 .logo_left img{
 	height:70px;
+	margin-left: 20px;
 }
 .logo_right{
 	width:300px;
@@ -181,6 +182,8 @@ body{
 	width:20%;
 	line-height:35px;
 	float:right;
+	text-align: right;
+	padding-right: 10px;
 }
 
 .title_right a{
@@ -194,12 +197,12 @@ body{
 	line-height:15px;
 }
 
-.pic_news img{
+.pic_news img,.course_pic img{
 	float:left;
 	margin:0 20px 0 5px;
 }
 
-.pic_news a{
+.pic_news a,.course_pic a{
 	color:#C00;
 	text-decoration:none;
 }
@@ -229,4 +232,160 @@ body{
 .news_list span{
 	color:#999;
 	float:right;
+}
+
+.course_pic{
+	height: 120px;
+	margin-top:10px;
+	line-height: 22px;
+}
+
+.course_type{
+	height: 37px;
+	width: 327px;
+	background: url(../images/product_type_bg.jpg)no-repeat;
+	margin: 20px auto;
+}
+
+.course_type li{
+	list-style-type: none;
+	float: left;
+	line-height: 37px;
+	margin: 0 15px;
+	text-align: center;
+}
+
+.video{
+	height: 185px;
+	border: 1px solid #E8E8E8;
+}
+
+.video_content{
+	height:150px;
+	
+}
+.sidebar_ad{
+	height: 55px;
+	border: 1px solid #8E8E8E;
+	margin-top:10px;
+}
+
+.copyright{
+	widows: 100%;
+	height: 200px;
+	background-color: #E8E8E8;
+	margin-top: 10px;
+	clear: both;
+}
+
+.copyright_content{
+	width:1000px;
+	margin: 0 auto;
+	padding-top: 20px;
+}
+.copyright_content li{
+	list-style-type: none;
+	float:left;
+	width:200px;
+	background: url(../images/line.png)no-repeat right center;
+	text-align: center;
+	line-height: 30px;
+	font-family: "微软雅黑";
+}
+.copyright_content a{
+	text-decoration: none;
+	color: #999999;
+	font-size: 18px;
+}
+
+.copyright_content li ul li a{
+	font-size: 14px;
+} 
+
+.list_main{
+	min-height: 350px;
+	background-color: #FFFFFF;
+	margin-top: 10px;
+
+}
+
+.news_type{
+	width: 220px;
+	height: 350px;
+	border: 1px solid #E8E8E8;
+	float: left;
+}
+
+.list_box{
+	width: 770px;
+	border: 1px solid #E8E8E8;
+	float: right;
+}
+
+.news_type h2{
+	height: 35px;
+	line-height: 35px;
+	font-size: 14px;
+	font-family: "微软雅黑";
+	color: #000000;
+	background-image:url(../images/titile_bg.gif) repeat-x;
+	margin-left:20px ;
+	
+}
+
+.news_type_content{
+	height: 365px;
+	background-image: url(../images/content_bg.gif) repeat-x;
+}
+
+.news_type_content li{
+	list-style-type: none;
+	line-height: 30px;
+	height: 30px;
+
+}
+
+.news_type_content li a{
+	color:#666666;
+	text-decoration: none;
+	background: url(../images/li_bg.gif) no-repeat left center;
+	padding-left: 15px;
+	display: block;
+}
+.news_type_content li a:hover{
+	color:#009CDF;
+	background: url(../images/li_bg2.gif) no-repeat left center;
+	background-color: #F2F2F2;
+}
+
+.list_box h2{
+	font-size: 14px;
+	font-family: "微软雅黑";
+	height: 35px;
+	line-height: 35px;
+	background: url(../images/type_bg.png) repeat-x;
+	color:#666666;
+}
+
+.page{
+	height: 40px;
+	margin-top: 10px;
+	text-align: center;
+}
+
+.page a{
+	display: inline-block;
+	border:1px solid #E8E8E8;
+	text-decoration: none;
+	margin: 5px;
+	padding: 5px 10px;
+}
+
+.page a:link,.page:a:visited{
+	color:#FFFFFF;
+	
+}
+
+.page a:hover,.page:a:active{
+	color: #000000;
 }
