--- a/客户关系/css/main.css
+++ b/客户关系/css/main.css
@@ -1,7 +1,7 @@
-*{
+﻿*{
 	margin: 0;
 	padding: 0;
-	font-size:12px ;
+	font-size:14px ;
 }
 
 body{
@@ -10,64 +10,65 @@ body{
 
 .top{
 	width: 100%;
-	background-color: #E8E8E8;
+	background-color: #FFFFFF;
 }
 
-
 .top_content{
-	width:1000px;
+	width:90%;
 	margin: 0 auto;
-	height:50px;
+	height:60px;
+	background-color: #fff;
 	
 }
 
 .top_left{
 	float: left;
+	margin-top:7px;
 	
 }
 
 .top_right{
+	width:50%;
 	float: right;
-	line-height: 50px;	
 }
-
 .top_right li{
 	list-style-type: none;
 	float:right;
-	line-height: 50px;
 }
 
-.top_right li a img{
-	margin-top: 7px;
+.top_right li  a {
+	width:35px;
 }
 
-.top_right li img{
-	margin: 0 25px;
+.top_right li  a img{
+	margin:15px 10px;
+	border:0;
 }
-form{
-	float: left;
-	margin-top: 12px;
+
+.top_right form{
+	clear:left;
+	margin-top:17px;
+
 }
 .search_text{
-	border: 0;
 	width: 170px;
 	height: 25px;
-	border: 1px #BFC1CD solid;
-	float: left;
-	line-height: 40px;
+	border:1px solid #8E8E8E;
+	float:left;
 }
 
 .search_btn{
-	background: url(../img/search.png) no-repeat center;
+	width:25px;
+	height:25px;
+	background:url(../img/search.png) no-repeat center;
+	float:left;
 	border:0;
-	width: 25px;
-	height: 25px;
-	float: left;
-	margin-left: 10px;
-	
+	margin-left:10px;
 }
 
 #login a{
+	width:35px;
+	line-height:60px;
 	text-decoration: none;
 	color: deepskyblue;
 	font-size: 16px;
@@ -80,7 +81,6 @@ form{
 	color: red;
 }
 
-
 .wrap{
 	width: 100%;
 	margin: 0 auto;
@@ -91,7 +91,7 @@ form{
 .nav{
 	background-color: #293543;
 	height:auto;
-	width: 170px;
+	width: 15%;
 	padding-top: 10px;
 	float:left;
 }
@@ -182,39 +182,110 @@ form{
 }
 
 .nav_right{
-	height: 50px;
+	height: 40px;
 	background-color: #F1F2F7;
+	width:85%;
+	float:right;
+	clear:right;
 	
 }
 
-.nav_right_content{
-	width: 90%;
-	margin: 0 auto;
+.nav_right_content span p{
+	display:inline;
+	margin-left:25px;
+	font-size:18px;
+	font-weight:bold;
+	line-height:40px;
 }
 
-.nav_right_content li{
-	line-height: 50px;
-	width: 160px;
-	list-style-type: none;
-	float: left;
-	background: url(../img/line.png) no-repeat right center;
-	text-align: center;
-}
-
-.nav_right_content li a{
-	text-decoration: none;
-	color: #999999;
-	font-size: 16px;
-}
-
-.nav_right_content li a:hover{
-	color: red;
+.nav_right_content button{
+	float:right;
+	margin-top:5px;
+	margin-right:15px;
 }
 
 .main{
+    width:85%;
 	margin-top: 10px;
-	height: 500px;
+	height: 585px;
 	background-color: #F1F2F7;
+	float:right;
+}
+
+.search_box{
+	margin-top:100px;
+	margin-left: auto;
+	margin-right: auto;
+	width:400px;
+}
+
+#search{
+	margin:0 auto;
+	
+}
+
+#search legend{
+	font-size:16px;
+	font-weight:bold;
+}
+
+
+#search input[type="text"]{
+	height: 30px;
+	width: 300px;
+	background-color:#fff;
+	border:0;
+	margin:0 10px;
+	vertical-align: middle;
+	line-height:30px;
+}
+
+#search input[type="submit"]{
+	height: 30px;
+	width: 60px;
+	background-color:deepskyblue;
+	color:#fff;
+	font-weight:bold;
+	border:0;
+	float:right;
+	margin-right:20px;
+}
+
+#search input[type="submit"]:hover{
+	background-color:red;
+}
+
+.text{
+	height: 30px;
+	width: 180px;
+	background-color:#fff;
+	border:0;
+	margin:0 10px;
+	vertical-align: middle;
+	line-height:30px;
+}
+
+.main_content{
+	width:85%;
+	margin:0 auto;
+	margin-top:20px;
+}
+span{
+	magin:15px;
+	line-height:40px;
+}
+
+.btn{
+	height: 30px;
+	width: 60px;
+	background-color:deepskyblue;
+	color:#fff;
+	font-weight:bold;
+	border:0;
+}
+
+.btn:hover{
+	background-color:red;
 }
 
 .copyright{
