--- a/JavaScript DOM 编程艺术/乐队网站/css/layout.css
+++ b/JavaScript DOM 编程艺术/乐队网站/css/layout.css
@@ -9,7 +9,7 @@ section,header,article,nav{
 
 body{
 	margin:1em 10%;
-	background-image: url();
+	background-image: url(../img/background.gif);
 	background-attachment: fixed;
 	background-position: top left;
 	background-repeat: repeat-x;
@@ -17,10 +17,69 @@ body{
 }
 
 header{
-	background-image:url();
+	background-image:url(../img/guitarist.gif);
 	background-repeat: no-repeat;
 	background-position: bottom right;
 	border-width: .1em;
 	border-style: solid;
 	border-bottom-width: 0;
+}
+
+header nav{
+	background-image: url(../img/navbar.gif);
+	background-position: bottom left;
+	background-repeat: repeat-x;
+	border-width: .1em;
+	border-style: solid;
+	border-bottom-width: 0;
+	border-top-width: 0;
+	padding-left: 10%;
+}
+
+header nav ul{
+	width:100%;
+	overflow: hidden;
+	border-left-width: .1em;
+	border-left-style: solid;
+}
+
+header nav li{
+	display: inline;
+}
+
+header nav li a{
+	display: block;
+	float: left;
+	padding: .5em 2em;
+	border-right: .1em solid;
+}
+
+article{
+	border-width: .1em;
+	border-style: solid;
+	border-top-width: 0;
+	padding: 2em 10%;
+	line-height: 1.8em;
+}
+
+article img{
+	border-width: .1em;
+	border-style: solid;
+	outline-width: .1em;
+	outline-style: solid;
+}
+#about header{
+	background-image: url(../img/lineup.gif);
+}
+
+#photo header{
+	background-image: url(../img/basshead.gif);
+}
+
+#live header{
+	background-image: url(../img/bassist.gif);
+}
+
+#contact header{
+	background-image: url(../img/drummer.gif);
 }
