--- a/JavaScript DOM 编程艺术/乐队网站/css/color.css
+++ b/JavaScript DOM 编程艺术/乐队网站/css/color.css
@@ -77,3 +77,13 @@ header nav a.here:active{
 	color:#eef;
 	background-color: #799;
 }
+
+th{
+	color: #edc;
+	background-color: #455;
+}
+
+tr td{
+	color: #233;
+	background-color: #eb6;
+}
