--- a/JavaScript DOM 编程艺术/乐队网站/css/color.css
+++ b/JavaScript DOM 编程艺术/乐队网站/css/color.css
@@ -87,3 +87,16 @@ tr td{
 	color: #233;
 	background-color: #eb6;
 }
+
+tr.odd td{
+	color: #233;
+	background-color: #ec8;
+}
+tr.highlight td{
+	color: #233;
+	background-color: #cba;
+}
+
+input.placeholder{
+	color: grey;
+}
