--- a/JavaScript DOM 编程艺术/乐队网站/css/layout.css
+++ b/JavaScript DOM 编程艺术/乐队网站/css/layout.css
@@ -111,3 +111,20 @@ article img{
 td{
 	padding: .5em .3em;
 }
+
+dl{
+	overflow: hidden;
+}
+dt{
+	float: left;
+}
+
+dd{
+	float: left;
+}
+label{
+	display: block;
+}
+fieldset{
+	border: 0;
+}
